# invoker-game-rust

./: .gitignore  Cargo.toml
.github/workflows/: main.yml
cli/: Cargo.toml
cli/src/: game.rs  main.rs
core/: Cargo.toml
core/src/: ctx.rs  game.rs  lib.rs
site/: index.html  index.js  package-lock.json  package.json
site/public/: index.html
site/src/: App.css  App.js
wasm/: .gitignore  Cargo.toml  game.js
wasm/src/: lib.rs
