[package]
name = "invoker-game-wasm"
version = "0.1.0-SNAPSHOT"
authors = ["zerosum <info@zerosum.dev>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
invoker-game-core = { path = "../core" }
